syntax = "proto3";

package user;

option go_package = "internal/proto";

service UserService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    int64 id = 1;
    string email = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
    string message = 1;
}
